syntax = "proto3";

// generate separate or multiple java file for each generated class.
option java_multiple_files = true;
// Package inside the src/main/java where generated classes will reside.
option java_package = "CarsOptions";
// Class name of the wrapper class which represent this file.
option java_outer_classname = "CarsOptionsServiceImpl";

// package name to avoid name collisions
package carsOptions;

// Interface exported by the server.
service CarsOptions {

// rpc method for server streaming
  rpc RequestCar (CarRequest) returns (stream CarResponse) {}

}

// define each variable in rpc method separately

message CarRequest {
  string car = 1;
}

message CarResponse {
  string model = 1;
  int32 price = 2;
}

